закончил "Каталог", начал "Наши консультанты"

--- a/index.html
+++ b/index.html
@@ -1,259 +1,250 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My-Giro</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
 
-  <body>
-    <div class="header-background">
-      <header class="header container">
-        <span class="header-text">
-          Мы всегда рады помочь по телефону +7 923 398 9013
-        </span>
-        <a class="link-text" href="#">
-          <span class="header-button">ЗАКАЗАТЬ ЗВОНОК</span>
-        </a>
-      </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My-Giro</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
+  <div class="header-background">
+    <header class="header container">
+      <span class="header-text">
+        Мы всегда рады помочь по телефону +7 923 398 9013
+      </span>
+      <a class="link-text" href="#">
+        <span class="header-button">ЗАКАЗАТЬ ЗВОНОК</span>
+      </a>
+    </header>
+  </div>
+  <div class="menu-background">
+    <div class="menu container">
+      <span class="menu-text">My-Giro</span>
+      <ul class="menu-item">
+        <li>
+          <a class="link-text menu-item-text" href="#advantages">ПРЕИМУЩЕСТВА</a>
+        </li>
+        <li>
+          <a class="link-text menu-item-text" href="#about-us">О НАС</a>
+        </li>
+        <li>
+          <a class="link-text menu-item-text" href="#features-of-hoverboards">
+            ОСОБЕННОСТИ
+          </a>
+        </li>
+        <li>
+          <a class="link-text menu-item-text" href="#catalog">КАТАЛОГ</a>
+        </li>
+        <li>
+          <a class="link-text menu-item-text" href="#">КОМАНДА</a>
+        </li>
+        <li>
+          <a class="link-text menu-item-text" href="#">БРЕНДЫ</a>
+        </li>
+        <li>
+          <a class="link-text menu-item-text" href="#">ПОЛЕЗНОЕ</a>
+        </li>
+      </ul>
     </div>
-    <div class="menu-background">
-      <div class="menu container">
-        <span class="menu-text">My-Giro</span>
-        <ul class="menu-item">
-          <li>
-            <a class="link-text menu-item-text" href="#advantages"
-              >ПРЕИМУЩЕСТВА</a
-            >
-          </li>
-          <li>
-            <a class="link-text menu-item-text" href="#about-us">О НАС</a>
-          </li>
-          <li>
-            <a class="link-text menu-item-text" href="#features-of-hoverboards">
-              ОСОБЕННОСТИ
-            </a>
-          </li>
-          <li>
-            <a class="link-text menu-item-text" href="#catalog">КАТАЛОГ</a>
-          </li>
-          <li>
-            <a class="link-text menu-item-text" href="#">КОМАНДА</a>
-          </li>
-          <li>
-            <a class="link-text menu-item-text" href="#">БРЕНДЫ</a>
-          </li>
-          <li>
-            <a class="link-text menu-item-text" href="#">ПОЛЕЗНОЕ</a>
-          </li>
-        </ul>
-      </div>
+  </div>
+  <div class="background">
+    <div class="main container">
+      <span class="main-header-text-1">My-Giro</span>
+      <span class="main-header-text-2">Крупнейший интернет-магазин гироскутеров, сигвеев и
+        электросамокатов<br />
+        от известных мировых производителей</span>
+      <a class="link-text" href="#">
+        <span class="main-header-button">В КАТАЛОГ</span></a>
     </div>
-    <div class="background">
-      <div class="main container">
-        <span class="main-header-text-1">My-Giro</span>
-        <span class="main-header-text-2"
-          >Крупнейший интернет-магазин гироскутеров, сигвеев и
-          электросамокатов<br />
-          от известных мировых производителей</span
-        >
-        <a class="link-text" href="#">
-          <span class="main-header-button">В КАТАЛОГ</span></a
-        >
-      </div>
-      <div class="background-sqare"></div>
+    <div class="background-sqare"></div>
+  </div>
+  <section class="our-advantages container">
+    <div class="headers">
+      <a name="advantages"> Наши приемущества </a>
+      <ul class="our-advantages-arrows">
+        <li>
+          <a class="link-text" href=""><img class="arrow-left" src="img/arrow.svg" alt="Arrow" /></a>
+        </li>
+        <li>
+          <a class="link-text" href=""><img src="img/arrow.svg" alt="Arrow" /></a>
+        </li>
+      </ul>
     </div>
-    <section class="our-advantages-background">
-      <div class="our-advantages container">
-        <div class="our-advantages-header">
-          <a name="advantages"> Наши приемущества </a>
-          <ul class="our-advantages-arrows">
-            <li>
-              <a class="link-text" href=""
-                ><img class="arrow-left" src="img/arrow.svg" alt="Arrow"
-              /></a>
-            </li>
-            <li>
-              <a class="link-text" href=""
-                ><img src="img/arrow.svg" alt="Arrow"
-              /></a>
-            </li>
-          </ul>
-        </div>
-        <ul class="our-advantages-menu">
-          <li class="our-advantages-qual">
-            <img
-              class="our-advantages-image"
-              src="img/100-kachestvo.png"
-              alt="Качество"
-            />
-            <span class="our-advantages-text">Гарантия качества</span>
+    <ul class="our-advantages-menu">
+      <li class="our-advantages-qual">
+        <img class="our-advantages-image" src="img/100-kachestvo.png" alt="Качество" />
+        <span class="our-advantages-text">Гарантия качества</span>
+      </li>
+      <li class="our-advantages-deli">
+        <img class="our-advantages-image" src="img/bistraya-dostavka.png" alt="Быстрая доставка" />
+        <span class="our-advantages-text">Быстрая доставка</span>
+      </li>
+      <li class="our-advantages-big">
+        <img class="our-advantages-image" src="img/bolshoy-assortiment.png" alt="Большой ассортимент" />
+        <span class="our-advantages-text">Большой ассортимент</span>
+      </li>
+      <li class="our-advantages-cons">
+        <img class="our-advantages-image" src="img/consultant.png" alt="Онлайн-консультант" />
+        <span class="our-advantages-text">Онлайн-консультант</span>
+      </li>
+    </ul>
+  </section>
+  <section class="about-us container">
+    <span class="headers">
+      <a name="about-us"> О нас </a>
+    </span>
+    <span class="about-us-text">
+      В нашем интернет-магазине представлен большой выбор гироскутеров,
+      сигвеев и электросамокатов от известных мировых производителей.
+    </span>
+    <span class="about-us-text">
+      Все товары, представленные на нашем сайте, отобраны лучшими
+      специалистами в этой области. Купить гироскутер, электросамокат или
+      сигвей недорого, Вы можете в нашем интернет-магазине в любое время,
+      когда Вам удобно. Доставка заказов осуществляется бесплатно, в любую
+      точку России.
+    </span>
+  </section>
+  <section class="about-us-bottom-background">
+    <div class="about-us-bottom container">
+      <span class="about-us-bottom-text">
+        Подпишитесь на нашу рассылку и оставайтесь в курсе событий
+      </span>
+      <ul class="about-us-menu">
+        <li class="about-us-bottom-item">
+          <span class="about-us-bottom-item-text">Имя</span>
+        </li>
+        <li class="about-us-bottom-item">
+          <span class="about-us-bottom-item-text">Email</span>
+        </li>
+        <li>
+          <a class="about-us-bottom-link link-text" href="#">
+            <span class="about-us-bottom-link-text"> ПОДПИСАТЬСЯ </span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section class="features-of-hoverboards container">
+    <span class="headers">
+      <a name="features-of-hoverboards"> Особенности гироскутеров </a>
+    </span>
+    <div class="features-of-hoverboards-menu">
+      <ul class="features-of-hoverboards-menu-item">
+        <li class="features-of-hoverboards-menu-item-item">— Трясет</li>
+        <li class="features-of-hoverboards-menu-item-item">
+          — Нет сиденья
+        </li>
+        <li class="features-of-hoverboards-menu-item-item">
+          — Только для одного
+        </li>
+      </ul>
+      <ul class="features-of-hoverboards-menu-item">
+        <li class="features-of-hoverboards-menu-item-item">
+          + Исключительная компактность
+        </li>
+        <li class="features-of-hoverboards-menu-item-item">
+          + Небольшой вес
+        </li>
+        <li class="features-of-hoverboards-menu-item-item">
+          + Экономность
+        </li>
+      </ul>
+      <ul class="features-of-hoverboards-menu-item">
+        <li class="features-of-hoverboards-menu-item-item">
+          + Доступность
+        </li>
+        <li class="features-of-hoverboards-menu-item-item">
+          + Маневренность
+        </li>
+        <li class="features-of-hoverboards-menu-item-item">
+          + Простой в освоении
+        </li>
+      </ul>
+    </div>
+    <span class="features-of-hoverboards-text">
+      Этих приемуществ гироскутера вполне достаточно для того, чтобы в своей
+      нише данный вид транспорта являлся одним из самых лучших вариантов!
+    </span>
+  </section>
+  <section class="catalog-background">
+    <div class="catalog container">
+      <div class="headers">
+        <a name="catalog">Каталог</a>
+        <ul class="catalog-menu">
+          <li class="catalog-menu-item">
+            <span class="catalog-menu-item-text link-text">Все</span>
           </li>
-          <li class="our-advantages-deli">
-            <img
-              class="our-advantages-image"
-              src="img/bistraya-dostavka.png"
-              alt="Быстрая доставка"
-            />
-            <span class="our-advantages-text">Быстрая доставка</span>
-          </li>
-          <li class="our-advantages-big">
-            <img
-              class="our-advantages-image"
-              src="img/bolshoy-assortiment.png"
-              alt="Большой ассортимент"
-            />
-            <span class="our-advantages-text">Большой ассортимент</span>
-          </li>
-          <li class="our-advantages-cons">
-            <img
-              class="our-advantages-image"
-              src="img/consultant.png"
-              alt="Онлайн-консультант"
-            />
-            <span class="our-advantages-text">Онлайн-консультант</span>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <section class="about-us-background">
-      <div class="about-us container">
-        <span class="about-us-header">
-          <a name="about-us"> О нас </a>
-        </span>
-        <span class="about-us-text">
-          В нашем интернет-магазине представлен большой выбор гироскутеров,
-          сигвеев и электросамокатов от известных мировых производителей.
-        </span>
-        <span class="about-us-text">
-          Все товары, представленные на нашем сайте, отобраны лучшими
-          специалистами в этой области. Купить гироскутер, электросамокат или
-          сигвей недорого, Вы можете в нашем интернет-магазине в любое время,
-          когда Вам удобно. Доставка заказов осуществляется бесплатно, в любую
-          точку России.
-        </span>
-      </div>
-    </section>
-    <section class="about-us-bottom-background">
-      <div class="about-us-bottom container">
-        <span class="about-us-bottom-text">
-          Подпишитесь на нашу рассылку и оставайтесь в курсе событий
-        </span>
-        <ul class="about-us-menu">
-          <li class="about-us-bottom-item">
-            <span class="about-us-bottom-item-text">Имя</span>
-          </li>
-          <li class="about-us-bottom-item">
-            <span class="about-us-bottom-item-text">Email</span>
-          </li>
-          <li>
-            <a class="about-us-bottom-link link-text" href="#">
-              <span class="about-us-bottom-link-text"> ПОДПИСАТЬСЯ </span>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <section class="features-of-hoverboards-background">
-      <div class="features-of-hoverboards container">
-        <span class="features-of-hoverboards-header">
-          <a name="features-of-hoverboards"> Особенности гироскутеров </a>
-        </span>
-        <div class="features-of-hoverboards-menu">
-          <ul class="features-of-hoverboards-menu-item">
-            <li class="features-of-hoverboards-menu-item-item">— Трясет</li>
-            <li class="features-of-hoverboards-menu-item-item">
-              — Нет сиденья
-            </li>
-            <li class="features-of-hoverboards-menu-item-item">
-              — Только для одного
-            </li>
-          </ul>
-          <ul class="features-of-hoverboards-menu-item">
-            <li class="features-of-hoverboards-menu-item-item">
-              + Исключительная компактность
-            </li>
-            <li class="features-of-hoverboards-menu-item-item">
-              + Небольшой вес
-            </li>
-            <li class="features-of-hoverboards-menu-item-item">
-              + Экономность
-            </li>
-          </ul>
-          <ul class="features-of-hoverboards-menu-item">
-            <li class="features-of-hoverboards-menu-item-item">
-              + Доступность
-            </li>
-            <li class="features-of-hoverboards-menu-item-item">
-              + Маневренность
-            </li>
-            <li class="features-of-hoverboards-menu-item-item">
-              + Простой в освоении
-            </li>
-          </ul>
-        </div>
-        <span class="features-of-hoverboards-text">
-          Этих приемуществ гироскутера вполне достаточно для того, чтобы в своей
-          нише данный вид транспорта являлся одним из самых лучших вариантов!
-        </span>
-      </div>
-    </section>
-    <section class="catalog-background">
-      <div class="catalog container">
-        <div class="catalog-header">
-          <a name="catalog">Каталог</a>
-          <ul class="catalog-menu">
-            <li>
-              <a class="catalog-menu-item-fill link-text" href="#">
-                <span class="catalog-menu-item-fill-text">Все</span>
-              </a>
-            </li>
-            <li class="catalog-menu-item">
-              <a class="catalog-menu-item-text link-text" href="#">
-                Электросамокаты
-              </a>
-            </li>
-            <li class="catalog-menu-item">
-              <a class="catalog-menu-item-text link-text" href="#">
-                Гироскутеры
-              </a>
-            </li>
-            <li class="catalog-menu-item">
-              <a class="catalog-menu-item-text link-text" href="#">Сигвеи</a>
-            </li>
-          </ul>
-        </div>
-        <ul class="catalog-goods-menu">
-          <li class="catalog-goods-menu-items">
-            <div class="catalog-goods-menu-items-name-background">
-              <span class="catalog-goods-menu-items-name">Сигвеи</span>
-            </div>
-            <div class="catalog-goods-items-img img-1"></div>
-            <span class="catalog-goods-items-description">
-              Xiaomi Ninebot mini Pro White (Белый)
+          <li class="catalog-menu-item">
+            <span class="catalog-menu-item-text link-text" href="#">
+              Электросамокаты
             </span>
           </li>
-          <li class="catalog-goods-menu-items">
-            <div class="catalog-goods-menu-items-name-background">
-              <span class="catalog-goods-menu-items-name">Гироскутеры</span>
-            </div>
-            <div class="catalog-goods-items-img img-2"></div>
+          <li class="catalog-menu-item">
+            <span class="catalog-menu-item-text link-text" href="#">
+              Гироскутеры
+            </span>
           </li>
-          <li class="catalog-goods-menu-items">
-            <div class="catalog-goods-menu-items-name-background">
-              <span class="catalog-goods-menu-items-name">Электросамокаты</span>
-            </div>
-            <div class="catalog-goods-items-img img-3"></div>
-          </li>
-          <li class="catalog-goods-menu-items">
-            <div class="catalog-goods-menu-items-name-background">
-              <span class="catalog-goods-menu-items-name">Сигвеи</span>
-            </div>
-            <div class="catalog-goods-items-img img-4"></div>
+          <li class="catalog-menu-item">
+            <a class="catalog-menu-item-text link-text" href="#">Сигвеи</a>
           </li>
         </ul>
       </div>
-    </section>
-  </body>
+      <ul class="catalog-goods-menu">
+        <li class="catalog-goods-menu-items">
+          <div class="catalog-goods-menu-items-name-background">
+            <span class="catalog-goods-menu-items-name">Сигвеи</span>
+          </div>
+          <div class="catalog-goods-items-img img-1"></div>
+          <span class="catalog-goods-items-description">
+            Xiaomi Ninebot mini Pro White (Белый)
+          </span>
+          <span class="catalog-goods-items-cost">31 480 р.</span>
+        </li>
+        <li class="catalog-goods-menu-items">
+          <div class="catalog-goods-menu-items-name-background">
+            <span class="catalog-goods-menu-items-name">Гироскутеры</span>
+          </div>
+          <div class="catalog-goods-items-img img-2"></div>
+          <span class="catalog-goods-items-description">Smart Balance Premium 10
+            Цветные молнии
+          </span>
+          <span class="catalog-goods-items-cost">10 990 р.</span>
+        </li>
+        <li class="catalog-goods-menu-items">
+          <div class="catalog-goods-menu-items-name-background">
+            <span class="catalog-goods-menu-items-name">Электросамокаты</span>
+          </div>
+          <div class="catalog-goods-items-img img-3"></div>
+          <span class="catalog-goods-items-description">SUBOR D9</span>
+          <span class="catalog-goods-items-cost">11 790 р.</span>
+        </li>
+        <li class="catalog-goods-menu-items">
+          <div class="catalog-goods-menu-items-name-background">
+            <span class="catalog-goods-menu-items-name">Сигвеи</span>
+          </div>
+          <div class="catalog-goods-items-img img-4"></div>
+          <span class="catalog-goods-items-description">
+            Xiaomi Ninebot mini Pro
+            White (Черный)
+          </span>
+          <span class="catalog-goods-items-cost">31 480 р.</span>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section class="our-consultants container">
+    <span class="headers">Наши консультанты</span>
+    <ul class="our-consultants-menu">
+      <li class="our-consultants-items">
+        <img src="img/1.png" alt="Иван Алексеев">
+      </li>
+      <li class="our-consultants-items"></li>
+      <li class="our-consultants-items"></li>
+    </ul>
+  </section>
+</body>
+
 </html>
