закончил "Наши консультанты"
добавил почти всем кнопкам выделение при наведении

--- a/index.html
+++ b/index.html
@@ -175,17 +175,13 @@
         <a name="catalog">Каталог</a>
         <ul class="catalog-menu">
           <li class="catalog-menu-item">
-            <span class="catalog-menu-item-text link-text">Все</span>
+            <a class="catalog-menu-item-text link-text" href="#">Все</a>
           </li>
           <li class="catalog-menu-item">
-            <span class="catalog-menu-item-text link-text" href="#">
-              Электросамокаты
-            </span>
+            <a class="catalog-menu-item-text link-text" href="#">Гироскутеры</a>
           </li>
           <li class="catalog-menu-item">
-            <span class="catalog-menu-item-text link-text" href="#">
-              Гироскутеры
-            </span>
+            <a class="catalog-menu-item-text link-text" href="#">Электросамокаты</a>
           </li>
           <li class="catalog-menu-item">
             <a class="catalog-menu-item-text link-text" href="#">Сигвеи</a>
@@ -237,13 +233,38 @@
   </section>
   <section class="our-consultants container">
     <span class="headers">Наши консультанты</span>
-    <ul class="our-consultants-menu">
-      <li class="our-consultants-items">
-        <img src="img/1.png" alt="Иван Алексеев">
-      </li>
-      <li class="our-consultants-items"></li>
-      <li class="our-consultants-items"></li>
-    </ul>
+    <div class="our-consultants-menu">
+      <div class="our-consultants-items">
+        <div class="our-consultants-item-img">
+          <img src="img/cons_1.png" alt="Иван Алексеев">
+        </div>
+        <div class="our-consultants-items-text">
+          <span class="our-consultants-item-name">Иван Алексеев</span>
+          <span class="our-consultants-item-description">Менеджер по продажам</span>
+          <span class="our-consultants-item-button">НАПИСАТЬ</span>
+        </div>
+      </div>
+      <div class="our-consultants-items">
+        <div class="our-consultants-item-img">
+          <img src="img/cons_2.png" alt="Галина Петровна">
+        </div>
+        <div class="our-consultants-items-text">
+          <span class="our-consultants-item-name">Галина Петровна</span>
+          <span class="our-consultants-item-description">Старший менеджер</span>
+          <span class="our-consultants-item-button">НАПИСАТЬ</span>
+        </div>
+      </div>
+      <div class="our-consultants-items">
+        <div class="our-consultants-item-img">
+          <img src="img/cons_3.png" alt="Иван Алексеев">
+        </div>
+        <div class="our-consultants-items-text">
+          <span class="our-consultants-item-name">Нина Астрахова</span>
+          <span class="our-consultants-item-description">Старший менеджер</span>
+          <span class="our-consultants-item-button">НАПИСАТЬ</span>
+        </div>
+      </div>
+    </div>
   </section>
 </body>
 
